plex/base/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "plex"
spec:
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: "plex"
  template:
    metadata:
      labels:
        app: "plex"
    spec:
      # hostNetwork: true
      securityContext:
        fsGroup: 1000
        # runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "plex"
          image: "linuxserver/plex:1.30.0"
          resources:
            limits:
              memory: "4Gi"
              cpu: "2"
          ports:
            - containerPort: 32400
              name: "plex-http"
              protocol: "TCP"
            - containerPort: 5353
              name: "plex-bonjour"
              protocol: "UDP"
            - containerPort: 32410
              name: "plex-gday-1"
              protocol: "UDP"
            - containerPort: 32412
              name: "plex-gday-2"
              protocol: "UDP"
            - containerPort: 32413
              name: "plex-gday-3"
              protocol: "UDP"
            - containerPort: 32414
              name: "plex-gday-4"
              protocol: "UDP"
          volumeMounts:
            - mountPath: "/config"
              name: "plex-config-pvc"
            - mountPath: "/data"
              name: "media-pvc"
      volumes:
        - name: "plex-config-pvc"
          persistentVolumeClaim:
            claimName: "plex-config-pvc"
        - name: "media-pvc"
          persistentVolumeClaim:
            claimName: "media-pvc"
