plex/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "plex-http"
spec:
  selector:
    app: "plex"
  # mobile applications only allow IP/port for manual connections
  type: "LoadBalancer"
  ports:
    - port: 32400
      name: "plex-http"
      targetPort: 32400
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "plex-gday-udp"
spec:
  selector:
    app: "plex"
  ports:
    - port: 32410
      name: "plex-gday-1"
    - port: 32412
      name: "plex-gday-2"
    - port: 32413
      name: "plex-gday-3"
    - port: 32414
      name: "plex-gday-4"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "plex-bonjour"
spec:
  selector:
    app: "plex"
  ports:
    - port: 5353
      name: "plex-bonjour"
